- fixed overlapping text issue in opportunity panes (fixes #73)

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -160,6 +160,7 @@ h5 {
     background-color: #e9e9e9;
     margin-bottom: 16px;
     min-height: 310px;
+    padding-bottom: 25px;
 }
 .opp-thumb {
     padding: 3px;
